control script
git-svn-id: https://svn.inf.mit.bme.hu/projects/ontology/source/incqueryd@919 25365000-b138-4714-a2de-83ea935fac61