@@ -12,7 +12,7 @@ echo $i >> series.txt
 AKKADIR=akka-2.1.4
 FOURSTORE_CLUSTER_NAME="incqueryd_cluster"
 
-max_size=2048
+max_size=256
 size=1
 
 # $size <= $max_size
@@ -24,26 +24,16 @@ do
   sudo bash -c "echo 3 > /proc/sys/vm/drop_caches"
   
   4s-cluster-stop $FOURSTORE_CLUSTER_NAME
-  echo killing processes
-  4s-ssh-all "pkill -f akk[a]"
-  4s-ssh-all "pkill -f incquer[y]"
+  sleep 10
   echo deleting 4store data directory
   4s-ssh-all "rm -rf /var/lib/4store/*"
-
-  echo starting akka
-  4s-ssh-all-parallel "nohup $AKKADIR/bin/akka distributed.rete.bootable.RemoteBootable > akka.out 2> akka.err < /dev/null &"
-  
-  sleep 20
 
   echo starting 4store cluster
   4s-cluster-create $FOURSTORE_CLUSTER_NAME
   4s-cluster-start $FOURSTORE_CLUSTER_NAME
-
-  java -jar \
-    -XX:MaxPermSize=256m -XX:+UseCompressedOops -Xms1G -Xmx1G \
-    $AKKADIR/deploy/incqueryd-prototype.jar 4store /home/szarnyasg/models/owl/testBig_User_${size} load
-
   sleep 10
+
+  java -jar -Xms1G -Xmx1G incqueryd-4s-control/target/incqueryd-4s-control-0.0.1-SNAPSHOT.jar /home/szarnyasg/models/owl/testBig_User_${size} 50
 
   size="$(($size * 2))"
 # for $size
